--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,12 +4,12 @@
   "compilerOptions": {
     "allowJs": true
   },
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    }
-  ],
+  // "references": [
+  //   {
+  //     "path": "./tsconfig.node.json"
+  //   },
+  //   {
+  //     "path": "./tsconfig.app.json"
+  //   }
+  // ],
 }
