--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   // "files": [],
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
-    "allowJs": true
+    "allowJs": true,
+    "module": "esnext",
   },
   // "references": [
   //   {
