:triangular_flag_on_post: Update: sweet alert plugin update

--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@sweetalert2/theme-dark": "^5.0.16",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
+    "sweetalert2": "^11.10.3",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-axios": "^3.5.2",
