--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
     "sweetalert2": "^11.10.3",
+    "swiper": "^11.0.5",
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-axios": "^3.5.2",
