--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@sweetalert2/theme-dark": "^5.0.16",
     "@vee-validate/i18n": "^4.12.4",
     "@vee-validate/rules": "^4.12.4",
+    "@vuepic/vue-datepicker": "^7.4.1",
+    "date-fns": "^3.3.1",
     "pinia": "^2.1.7",
     "sass": "^1.69.7",
     "sweetalert2": "^11.10.3",
