--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,7 +11,8 @@
     "composite": true,
     "noEmit": true,
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "node", //"Bundler",
+    "allowSyntheticDefaultImports": true,
     "types": ["node"]
   }
 }
