:triangular_flag_on_post: Update: aos plugin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "noFallthroughCasesInSwitch": true,
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": ["src/*"],
+      "*": ["types/*"]
     }
   },
+  
 }
