--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "@popperjs/core": "^2.11.8",
     "@sweetalert2/theme-dark": "^5.0.16",
+    "@types/aos": "^3.0.7",
     "@vee-validate/i18n": "^4.12.4",
     "@vee-validate/rules": "^4.12.4",
     "aos": "^3.0.0-beta.6",
