--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "vee-validate": "^4.12.4",
     "vue": "^3.3.11",
     "vue-axios": "^3.5.2",
+    "vue-loading-overlay": "6.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
